# mocap4r2_msgs

./: CHANGELOG.rst  CMakeLists.txt  README.md  mocap4r2_bridge_mapping_rule.yaml  mocap_bridge_mapping_rule.yaml  package.xml
msg/: Control.msg  ImusInfo.msg  Marker.msg  MarkerWithId.msg  Markers.msg  MarkersWithId.msg  RigidBodies.msg  RigidBody.msg
srv/: ViconCalibSeg.srv  ViconGrabPose.srv
