<package format="3">
  <name>mocap_msgs</name>
  <version>0.0.1</version>
  <description>mocap_msgs</description>
  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
 
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
  </export>
</package>