<package format="3">
  <name>mocap_msgs</name>
  <version>0.0.2</version>
  <description>mocap_msgs</description>
  <author>Lorena Bajo</author>
  <maintainer email="lorena.bajo@urjc.es">David Vargas</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="mocap_bridge_mapping_rule.yaml" />
  </export>

</package>
